--- a/templates/index.html
+++ b/templates/index.html
@@ -29,35 +29,30 @@
     const form = document.getElementById("dataForm");
     
     form.addEventListener("submit", async function(event){
-        event.preventDefault(); // Stop the page from refreshing
+        event.preventDefault();
 
-        // 1. Get the raw inputs
+    
         const playerTag = document.getElementById("playerTag").value;
         const apiToken = document.getElementById("apiToken").value;
 
-        // 2. "Pack the Box" (Create a JS Object)
+
         const dataToSend = { 
             playerTag: playerTag, 
             apiToken: apiToken 
         };
 
-        // 3. call the Courier (Fetch)
-        // We use 'await' because the truck takes time to drive there and back
         const response = await fetch('http://127.0.0.1:5000/verify-user', {
             
-            // A. The Method: We are PUSHING data, so we use POST
             method: 'POST', 
             
-            // B. The Label: This tells Flask "Hey, I'm sending JSON!"
             headers: { 
                 'Content-Type': 'application/json' 
             },
             
-            // C. The Contents: We turn our JS Object into a text String
             body: JSON.stringify(dataToSend) 
         });
 
-        // 4. Open the Reply
+
         const result = await response.json();
         
         if(result.message == true){
