--- a/templates/index.html
+++ b/templates/index.html
@@ -25,4 +25,4 @@
     
 </body>
 
-<script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+<script src="{{ url_for('static', filename='js/index.js') }}"></script>
