added buttons and styles
Co-authored-by: Jonathan Jia <jonathanjia@hotmail.com>

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,17 +10,27 @@
     <div class="container">
         <!-- this link is not going to be here ofc-->
         <a target="_blank" href="https://www.clashofstats.com/players/sheep-tiger-82GVQYRRL/summary"> 
-        <button style="height: 50px;" id="user">
-                <div class="box" style="text-align:center"> {{username}} </div> 
+        <button id="user">
+                <div class="box"> {{username}} </div> 
             </button>
         </a>
-        
-
     </div>
-        <p style="text-align:right; margin-right:20px;">
-        Recruit Status: {{ recruit_status }}
-            </p>
+        <p style="text-align:left; margin-left:20px;">Recruit Status: {{ recruit_status }}</p>
     <hr>
+    <div class="button_container">
+        <div class="container">
+    <button class="findclan", id = findClan>
+            Find Clan
+        </button>
+    </div>    
+
+    <div class="container">
+    <button class="recruit", id = recruit>
+            Recruit
+        </button>
+    </div>    
+    </div>
+
 </body>
 
 <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
