--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1,12 +1,50 @@
     .box{
-        background-color: white;
+        background-color: lightgrey;
         width: 100px;
         height: 15px;
         border: lightgrey;
         padding: 10px;
+        text-align: center;
     }   
     .container {
         display: flex;
         justify-content: flex-end; 
-        height: 100px; 
+        height: auto;
     }
+    .findclan {
+        height : 250px;
+        width: 500px;
+        border: black;
+        }
+
+    .recruit{
+        height : 250px;
+        width: 500px;
+        border: black;
+    }
+    
+    .button_container{
+        display: flex;
+        justify-content: center;
+        gap: 50px; 
+        margin-top: 20px;     
+        
+    }
+
+    h1 {
+    margin: 10px 0; /* top/bottom 10px */
+    }
+
+    p {
+    margin: 5px 0;
+    } 
+
+    button {
+        background-color: white;
+        height : 50px;
+        cursor: pointer;
+        text-align: center;
+
+    }
+
+
